先录到文件中
mediarecorder录到文件中，需要设置uses-permission

--- a/app/src/main/res/layout/screen_share_to.xml
+++ b/app/src/main/res/layout/screen_share_to.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_startrecord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_record" />
+        <Button
+            android:id="@+id/btn_stoprecord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stop_record"
+            android:layout_gravity="right"/>
+    </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btn_share"
+    <SurfaceView
+        android:id="@+id/surfaceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/sharescreen_to" />
+        android:layout_weight="1" />
 </LinearLayout>
